icon correction on store
